Initial project files

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,7 +45,8 @@
       "css",
       "html",
       "htm",
-      "php"
+      "php",
+      "webp"
     ]
   },
   "pathFilters": [
@@ -243,3 +244,4 @@
   "file-type-png": "{\"compilers\":[\"png\"]}",
   "file-type-jpg": "{\"compilers\":[\"jpg\"]}"
 }
+
